--- a/src/assets/swiperStyles.css
+++ b/src/assets/swiperStyles.css
@@ -1,6 +1,7 @@
 .swiper-button-next,
 .swiper-button-prev{
     color: red;
+    width: 30px;
 }
 .swiper-button-next::after,
 .swiper-button-prev::after{
